fix(player): fix dark mode time-input color

--- a/src/style/_player.scss
+++ b/src/style/_player.scss
@@ -35,7 +35,7 @@ video {
     }
 }
 
-&.fullscreen .controls {
+&.fullscreen .controls-wrapper .controls {
     padding: 2px 4px;
 }
 
@@ -91,6 +91,7 @@ video {
             .time-input {
                 font-family: auto;
                 font-size: inherit;
+                color: var(--fg-color);
                 padding: 0;
                 cursor: text;
                 border: none;
